# k8s-mc-discord

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
