[package]
name = "k8s-mc-discord"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
poise = { version = "0.6.1", features = ["cache"] }
regex = "1.11.1"
reqwest = "0.12.22"
serde_json = "1.0.141"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.27.0"
