[package]
name = "k8s-mc-discord"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
poise = { version = "0.6", features = ["cache"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
